# plover-qaqcombopy

./: LICENSE  dictionary.py  overwrite.json  qcombopy.py  setup.cfg
