[metadata]
name = plover-qaqcombopy
keywords = plover plover_plugin

[options]
zip_safe = False
setup_requires =
  setuptools>=30.3.0
install_requires =
  regex>=2021.0.0
  plover>=4.0.0.dev10
  plover_python_dictionary>=1.0.0

py_modules =
  qcombopy

package_data =
  dictionary.py
  overwrite.json

include_package_data = False


[options.entry_points]
plover.system =
  QComboPy = qcombopy
